Adds current values table

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4,3 +4,11 @@
    title = {Parameterized Algorithms},
    publisher = {Springer},
 }
+
+@technreport{brand-84,
+  title = {Partitions of graphs into one or two independent sets and cliques},
+  author = {Andreas Brandst\"adt},
+  institution = {Friederich-Schiller-Universtat Jena},
+  year = {1984},
+
+}
