Adds the explanation of basic cases

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,10 +5,37 @@
    publisher = {Springer},
 }
 
+@article{brand-96,
+  title={Partitions of graphs into one or two independent sets and cliques},
+  author={Brandst{\"a}dt, Andreas},
+  journal={Discrete Mathematics},
+  volume={152},
+  number={1-3},
+  pages={47--54},
+  year={1996},
+  publisher={Elsevier}
+}
+
+
 @technreport{brand-84,
   title = {Partitions of graphs into one or two independent sets and cliques},
   author = {Andreas Brandst\"adt},
   institution = {Friederich-Schiller-Universtat Jena},
   year = {1984},
+}
 
+@book{konig36,
+  title={Theorie der endlichen und unendlichen Graphen: Kombinatorische Topologie der Streckenkomplexe},
+  author={K{\"o}nig, D{\'e}nes},
+  volume={16},
+  year={1936},
+  publisher={Akademische Verlagsgesellschaft mbh}
+}
+
+@book{gareyjohnson,
+  title={Computers and intractability},
+  author={Garey, Michael R and Johnson, David S},
+  volume={29},
+  year={2002},
+  publisher={wh freeman New York}
 }
