Uses UFF ABNT class

--- a/main.tex
+++ b/main.tex
@@ -11,17 +11,16 @@
 	%subsection=TITLE,	% títulos de subseções convertidos em letras maiúsculas
 	%subsubsection=TITLE,% títulos de subsubseções convertidos em letras maiúsculas
 	% -- opções do pacote babel --
-  english
-	]{abntex2}
+	]{./styles/abnt_UFF}
 \usepackage{pacs}
 
 \begin{document}
-\selectlanguage{english}
 
 \input{chapters/header.tex}
 \input{chapters/1.tex}
 \input{chapters/2.tex}
 
+%\bibliographystyle{ic-uff}
 \bibliography{bibliography}
 
 
