--- a/pacs.sty
+++ b/pacs.sty
@@ -1,9 +1,7 @@
 \ProvidesPackage{pacs}
 %---pacotes para hiphenizacao e acentuacao em portugues
-\usepackage[english]{babel}
 \usepackage{lmodern}			% Usa a fonte Latin Modern
 \usepackage[T1]{fontenc}		% Selecao de codigos de fonte.
-\usepackage[utf8]{inputenc}		% Codificacao do documento (conversão automática dos acentos)
 \usepackage[pdftex]{color,graphicx}
 \usepackage{import}
 \usepackage[num]{abntex2cite}
@@ -12,15 +10,12 @@
 \usepackage{epsf}
 \usepackage[dvips]{epsfig,graphicx}
 \usepackage{floatrow}
-\usepackage{subfigure}
+%\usepackage{subfigure}
 
 %--- pacote de simbolos
 \usepackage{latexsym}
 \usepackage{textcomp}
 
-%--- simbolos matematicos
-\usepackage{amsmath}
-\usepackage{amssymb}
 
 %--- pacote para gerar pseudo-codigo
 \usepackage{algorithm}
@@ -75,7 +70,6 @@
 
 \usepackage[final]{pdfpages}
 
-\usepackage{multicol}
 \usepackage{multirow}
 \usepackage{rotating}
 
@@ -86,11 +80,15 @@
 \definecolor{warn}{HTML}{e2cb49}
 \newcommand{\RL}{$(r,\ell)$}
 \renewcommand{\O}[1]{$\mathcal{O}(#1)$}
-\renewcommand{\P}{\mathcal{P}}
-\newcommand{\NPc}{\textit{NPc}}
+\renewcommand{\P}{$\mathcal{P}$}
+\newcommand{\NPc}{$\textit{NPc}$}
 \newcommand{\?}{\textcolor{warn}{?}}
 \newcommand{\size}[1]{|#1|}
 
 \definecolor{bg}{rgb}{0.95,0.95,0.95}
 \newcommand{\Mod}[1]{\ (\mathrm{mod}\ #1)}
 \usetikzlibrary{graphs}
+\PassOptionsToPackage{unicode}{hyperref}
+\newcommand*{\refname}{Bibliography}
+\renewcommand{\ABNTchapterfont}{\bfseries\fontfamily{cmr}\fontseries{b}\selectfont}
+\renewcommand{\ABNTsectionfont}{\bfseries\fontfamily{cmr}}
