--- a/bibliography.bib
+++ b/bibliography.bib
@@ -16,6 +16,16 @@
   publisher={Elsevier}
 }
 
+@book{cygan-2015,
+  title={Parameterized algorithms},
+  author={Cygan, Marek and Fomin, Fedor V and Kowalik, {\L}ukasz and Lokshtanov, Daniel and Marx, D{\'a}niel and Pilipczuk, Marcin and Pilipczuk, Micha{\l} and Saurabh, Saket},
+  volume={4},
+  number={8},
+  year={2015},
+  publisher={Springer}
+}
+
+
 
 @technreport{brand-84,
   title = {Partitions of graphs into one or two independent sets and cliques},
