--- a/pacs.sty
+++ b/pacs.sty
@@ -92,3 +92,6 @@
 \newcommand*{\refname}{Bibliography}
 \renewcommand{\ABNTchapterfont}{\bfseries\fontfamily{cmr}\fontseries{b}\selectfont}
 \renewcommand{\ABNTsectionfont}{\bfseries\fontfamily{cmr}}
+
+% Lemmas and corolary defs
+\newtheorem{lemma}{Lemma}
